[metadata]
name = napari-spot-detection-tutorial
license = BSD 3-Clause
license_file = LICENSE
description = Tutorial for spot detection in napari
long_description = file: README.md
long_description_content_type = text/markdown
author = napari team


[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    cookiecutter
    napari
    notebook
    numpy
    PyQt5==5.14.2
    scikit-image
    scipy

